# haskell-tsne

./: .hgignore  README.md  stack.yaml  tsne.cabal
example/: Main.hs  generate_scikit_learn_digits_data.py
src/: TSNE.hs
src/Data/Algorithm/: TSNE.hs
src/Data/Algorithm/TSNE/: Checks.hs  Internals.hs  Preparation.hs  Run2D.hs  Run3D.hs  Stepping.hs  Types.hs  Utils.hs
test/Data/Algorithm/: TSNESpec.hs
test/Data/Algorithm/TSNE/: ChecksSpec.hs  InternalsSpec.hs  PreparationSpec.hs  Run2DSpec.hs  Run3DSpec.hs  SteppingSpec.hs  TestInput.hs  TestMisc.hs  UtilsSpec.hs
timing/: Main.hs
