name:                tsne
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://bitbucket.org/robagar/haskell-tsne
license:             LGPL
license-file:        LICENSE
author:              Rob Agar
maintainer:          robagar@fastmail.net
copyright:           2016 Rob Agar
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Algorithm.TSNE
  build-depends:       base >= 4.7 && < 5,
                       mtl,
                       data-default,
                       normaldistribution
  default-language:    Haskell2010

test-suite tSNE-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
   other-modules:       Data.Algorithm.TSNESpec
   build-depends:       base,
                        hspec,
                        tsne
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010

source-repository head
  type:     mercurial
  location: https://bitbucket.org/robagar/haskell-tsne
