name:                tsne
version:             0.1.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://bitbucket.org/robagar/haskell-tsne
license:             LGPL
license-file:        LICENSE
author:              Rob Agar
maintainer:          robagar@fastmail.net
copyright:           2016 Rob Agar
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Algorithm.TSNE,
                       Data.Algorithm.TSNE.Types, 
                       Data.Algorithm.TSNE.Internals, 
                       Data.Algorithm.TSNE.Utils,
                       Data.Algorithm.TSNE.Checks 
  build-depends:       base >= 4.7 && < 5,
                       mtl,
                       data-default,
                       normaldistribution
  default-language:    Haskell2010

test-suite tSNE-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
   other-modules:       Data.Algorithm.TSNESpec,
                        Data.Algorithm.TSNE.InternalsSpec,
                        Data.Algorithm.TSNE.UtilsSpec,
                        Data.Algorithm.TSNE.ChecksSpec
   build-depends:       base,
                        hspec,
                        data-default,
                        tsne
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010

executable haskell_tsne_example
   hs-source-dirs:     example
   main-is:            Main.hs
   build-depends:      base,
                       data-default,
                       tsne

source-repository head
  type:     mercurial
  location: https://bitbucket.org/robagar/haskell-tsne
